<resources>
    <string name="app_name">evgram</string>
    <string name="evgram">Evgram</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome_de_usu_rio">Nome de Usuário</string>
    <string name="sair">Sair</string>
    <string name="home">Home</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="perfil">Perfil</string>
    <string name="postagens">Postagens</string>
</resources>